# rkvc

./: Cargo.toml  README.md  rust-toolchain.toml
derive/: Cargo.toml  README.md
derive/src/: lib.rs
derive/tests/: tests.rs
derive/tests/expand/: basic.expanded.rs  complex_fields.expanded.rs  crate_path.expanded.rs  crate_path.rs  empty.expanded.rs  empty.stderr  parse_errors.expanded.rs  parse_errors.rs  parse_errors.stderr  primitive_fields.expanded.rs
derive/tests/samples/: basic.expanded.rs  basic.rs  complex_fields.expanded.rs  complex_fields.rs  crate_path.expanded.rs  crate_path.rs  empty.rs  empty.stderr  labeled.expanded.rs  labeled.rs  parse_errors.expanded.rs  parse_errors.rs  parse_errors.stderr  primitive_fields.expanded.rs  primitive_fields.rs  visibilities.expanded.rs  visibilities.rs
examples/: Cargo.toml
src/: attributes.rs  cmz.rs  hash.rs  lib.rs  pedersen.rs  pederson.rs  pok.rs  predicate.rs  range.rs  zkp.rs
src/predicate/: ops.rs
