[workspace]
members = [
  ".",
  "derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "rkvc"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
blake2 = { version = "0.10.6", default-features = false }
bulletproofs = { version = "5.0.0", default-features = false, features = ["rand", "thiserror"] }
curve25519-dalek = { version = "4.1", default-features = false, features = ["zeroize", "precomputed-tables", "rand_core", "digest", "serde", "group"] }
digest = { version = "0.10.7", default-features = false }
ff = { version = "0.13.0", default-features = false, features = ["bits", "derive", "derive_bits"] }
generic-array = { version = "1.1.1", default-features = false, features = ["serde", "zeroize"] }
group = { version = "0.13.0", default-features = false, features = ["rand"] }
itertools = "0.13.0"
lox-zkp = "0.8.1"
nimue = { version = "0.1.1", default-features = false, features = ["group"] }
rand = { version = "0.8", features = ["std_rng"] }
rand_core = { version = "0.6", default-features = false }
rkvc-derive = { path = "./derive", optional = true }
subtle = { version = "2.6", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
typenum = { version = "1.17.0", features = ["const-generics", "no_std"] }
zeroize = { version = "1.8.1", default-features = false }

[dev-dependencies]
rkvc = { path = ".", features = ["std"] }
rkvc-derive = { path = "./derive" }

[profile.dev]
# Makes tests run much faster at the cost of slightly longer builds.
opt-level = 1

[features]
default = ["derive"]
derive = ["dep:rkvc-derive"]
std = []
