[workspace]
members = [
  ".",
  "derive",
  "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[package]
name = "rkvc"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[workspace.dependencies]
rkvc = { path = "." }
rkvc-derive = { path = "./derive" }

[dependencies]
blake2 = { version = "0.10.6", default-features = false }
bulletproofs = { version = "5.0.0", default-features = false, features = ["rand", "thiserror"] }
curve25519-dalek = { version = "4.1", default-features = false, features = ["zeroize", "precomputed-tables", "rand_core", "digest", "group"] }
digest = { version = "0.10.7", default-features = false }
ff = { version = "0.13.0", default-features = false, features = ["bits", "derive", "derive_bits"] }
group = { version = "0.13.0", default-features = false, features = ["rand"] }
hybrid-array = { version = "0.3.0", features = ["zeroize"] }
itertools = "0.14.0"
# lox-zkp is a fork of zkp, used by the Lox project, with some improvements
lox-zkp = "=0.8.1"
nimue = { version = "0.1.1", default-features = false, features = ["group"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
rkvc-derive = { path = "./derive", optional = true }
subtle = { version = "2.6", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
typenum = { version = "1.17.0", features = ["const-generics", "no_std"] }
zeroize = { version = "1.8.1", default-features = false }

[dev-dependencies]
rkvc-derive = { workspace = true }

[profile.dev]
# Makes tests run much faster at the cost of slightly longer builds and worse debug info.
opt-level = 1

[features]
default = ["derive"]
derive = ["dep:rkvc-derive"]
std = []
