[package]
name = "rkvc-examples"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.95"
blake2 = "0.10.6"
chacha20poly1305 = { version = "0.10.1", default-features = true, features = ["rand_core"] }
curve25519-dalek = "4.1"
hkdf = "0.12.4"
rand = "0.8"
rkvc = { path = ".." }
zeroize = "1.8.1"
